text align fix

--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ article#resume h2 {
     justify-content: space-between;
 }
 
-.grid-content * {
+.grid-content h1, h2, h3, h4, h5, h6, span {
     text-align: end;
 }
 
